fixed word wrap

--- a/style.css
+++ b/style.css
@@ -53,4 +53,5 @@ body {
   margin: 0px;
   margin-top: 30px;
   font-size: 50px;
+  white-space: nowrap;
 }
